# Skin-Cancer-Detection-App

./: .gitignore  LICENSE  README.md  changes.patch  docker-compose.yml  main.py
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/config/: config.py
backend/detection/data/labels/: labels.txt
backend/detection/data/masks/: masks.txt
backend/detection/data/visualized/: visualized.txt
backend/detection/processing/: constants.py  convert_masks_to_labels.py  draw_single_image.py  prepare_labels.py  preprocessing.ipynb  processing.md  visualize_predictions.py
backend/internal/database/: database.py
backend/internal/email/: mailer.py  verification_code.py
backend/internal/exception/: base_exception.py  error_codes.py  handler.py
backend/internal/models/: access_token.py  change_password_request.py  refresh_token.py  report_model.py  update_profile_request.py  user.py
backend/internal/tokens/: dependencies.py  tokens.py
backend/internal/utils/: logger.py  response.py
backend/routes/: auth_controller.py  auth_route.py  detection.py  report_controller.py
backend/static/: reset-password.html
frontend/: .flutter-plugins 2  .flutter-plugins-dependencies 2  .gitignore  app.json  getBackendURL.ts  logger.ts  package-lock.json  package.json  pubspec.yaml  tsconfig.json
frontend/app/: _layout.tsx  index.tsx
frontend/components/: HealthIconLoader.tsx
frontend/config/: app.config.js
frontend/constants/: Colors.ts  images.ts
frontend/lib/: main.dart
frontend/services/: ApiEndpoints.ts  ApiService.ts
(+44 files in other folders)
