[project]
name = "skin-cancer-detection-app"
version = "0.1.0"
description = "Skin Cancer Detection App"
authors = [
    { name = "Zeynep Sude Cengiz", email = "zzscengiz@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "SQLAlchemy",
    "asyncpg",
    "psycopg2-binary",
    "python-dotenv",
    "pydantic",
    "python-multipart",
    "esdk-obs-python",
    "Pillow",
    "motor",
    "pymongo"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"